[project]
name = "goit-algo2-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Maryna Kindras",email = "140345218+MarynaKindras@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx (>=3.5,<4.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "btrees (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
